objects/com_smartsheet__DL_FilterExpression__c.object
<CustomObject>
    <fields>
        <fullName>com_smartsheet__configId__c</fullName>
        <label>configId</label>
        <referenceTo>com_smartsheet__DL_Config__c</referenceTo>
        <relationshipLabel>DL_FilterExpressions</relationshipLabel>
        <relationshipName>DL_FilterExpressions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__fieldName__c</fullName>
        <label>fieldName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__filterGroupId__c</fullName>
        <label>filterGroupId</label>
        <referenceTo>com_smartsheet__DL_FilterGroup__c</referenceTo>
        <relationshipLabel>DL_FilterExpressions</relationshipLabel>
        <relationshipName>DL_FilterExpressions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__operator__c</fullName>
        <label>operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                    <default>true</default>
                    <label>=</label>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>com_smartsheet__value__c</fullName>
        <label>value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DL_FilterExpression</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DL_FilterExpressions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>